# rpc

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  build.sh
conf/: test_http_server.xml  test_invalid_server.xml  test_partial_server.xml  test_start_http.xml  test_start_tinypb.xml  test_tinypb_server.xml
docs/: coroutine-model.md  error-code.md  future-replica-plan.md  learning-summary.md  naming-violations.md  original-coverage-matrix.md  project-structure.md  reactor-event-lifecycle.md  replica-progress.md  simplified-completion-task-plan.md  stage-1.md  stage-10.md  stage-11.md  stage-12.md  stage-13.md  stage-15.md  stage-16.md  stage-18.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md  stage-8.md  stage-9.md  task-plan.md  tcpconnection-lifetime.md
docs/30-技术手册/: protobuf-rpc-guide.md
docs/40-工程规范/: 编码规范.md
docs/notes/: rename-msgreq-to-reqid.md
examples/generated_project/: README.md
examples/http_server/: README.md
examples/tinypb_async/: README.md
examples/tinypb_sync/: README.md
generator/: tinyrpc_generator.py
generator/template/: CMakeLists.txt.template  README.md.template  client.cc.template  conf.xml.template  interface.cc.template  interface.h.template  main.cc.template  run.sh.template  server.cc.template  server.h.template  shutdown.sh.template
mytinyrpc/comm/: config.cc  config.h  errorcode.h  log.cc  log.h  msgreq.cc  msgreq.h  reqid.cc  reqid.h  runtime.cc  runtime.h  start.cc  start.h
mytinyrpc/coroutine/: coctx.h  coctx_swap.S  coctxswap.s  coroutine.cc  coroutine.h  coroutine_hook.cc  coroutine_hook.h  coroutine_pool.cc  coroutinehook.cc  coroutinehook.h  coroutinepool.cc  coroutinepool.h  memory.cc  memory.h
mytinyrpc/net/: abstractcodec.h  abstractdata.h  abstractdispatcher.h  fdevent.cc  fdevent.h  fdutil.cc  fdutil.h  iothread.cc  iothread.h  iothread_pool.cc  iothread_pool.h  iothreadpool.cc  iothreadpool.h  mutex.cc  mutex.h  netaddress.cc  netaddress.h  reactor.cc  reactor.h  socket.h  tcpbuffer.cc  tcpbuffer.h  tcpclient.cc  tcpclient.h  tcpconnection.cc  tcpconnection.h  tcpconnection_timewheel.cc  tcpconnection_timewheel.h  tcpconnectiontimewheel.cc  tcpconnectiontimewheel.h  tcpserver.cc  tcpserver.h  timer.cc  timer.h
mytinyrpc/net/http/: http_define.cc  http_define.h  http_request.cc  http_request.h  http_response.cc  http_response.h  httpcodec.cc  httpcodec.h  httpdefine.cc  httpdispatcher.cc  httpdispatcher.h  httprequest.cc  httprequest.h  httpresponse.cc  httpresponse.h  httpservlet.cc  httpservlet.h
mytinyrpc/net/tinypb/: tinypbcodec.cc  tinypbcodec.h  tinypbdata.h  tinypbdispatcher.cc  tinypbdispatcher.h  tinypbrpcasyncchannel.cc  tinypbrpcasyncchannel.h  tinypbrpcchannel.cc  tinypbrpcchannel.h  tinypbrpccontroller.cc  tinypbrpccontroller.h
scripts/: check_all.ps1  check_all.sh  check_generator.sh  check_generator_project.sh  check_rpc_async.sh  check_rpc_sync.sh  check_rpc_sync_basic.sh  check_stage1.sh  check_stage11_server.sh  check_stage12_http.sh  check_stage8_rpc.sh
testcases/: test_abstract_codec.cc  test_config.cc  test_connection_codec.cc  test_coroutine.cc  test_coroutine_pool.cc  test_epoll_accept.cc  test_fdevent.cc  test_hook.cc  test_hook_sleep.cc  test_hook_socket.cc  test_http_codec.cc  test_http_define.cc  test_http_dispatcher.cc  test_http_server.cc  test_iothread.cc  test_iothread_pool.cc  test_log.cc  test_memory_pool.cc  test_msg_req.cc  test_mutex.cc  test_protobuf_service.cc  test_reactor.cc  test_reactor_accept.cc  test_req_id.cc  test_runtime.cc  test_start.cc  test_tcp_buffer.cc  test_tcp_client.cc  test_tcp_echo_server.cc  test_tcp_timewheel.cc  test_timer.cc  test_timer_event.cc  test_timer_task.cc  test_tinypb_async_client.cc  test_tinypb_codec.cc  test_tinypb_data.cc  test_tinypb_dispatcher.cc  test_tinypb_rpc_async_channel.cc  test_tinypb_rpc_channel.cc  test_tinypb_server.proto  (+2 more)
